--- a/client/src/app/items-detail/items-detail.component.scss
+++ b/client/src/app/items-detail/items-detail.component.scss
@@ -7,24 +7,25 @@
 .table {
     display: table;
     width: 100%;
-    min-height: 212px;
+    //min-height: 212px;
 }
 
 .table-cell {
     display: table-cell;
     vertical-align: middle;
+    width: 50%;
 }
 
 .display-table-cell {
     display: table-cell;
     padding-top: 32px;
+    padding-right: 32px;
     .font-size {
         font-size: 24px
     }
     span {
         display: inline-block;
         vertical-align: middle;
-        padding-right: 5px
     }
     p {
         margin: 0;
@@ -34,10 +35,9 @@
 }
 
 .img-product {
-    height: 180px;
-    width: 180px;
+    height: 680px;
+    width: 680px;
     border-radius: 4px;
-    margin: 16px;
 }
 
 .width-180 {
@@ -54,4 +54,28 @@
     background-repeat: no-repeat;
     height: 18px;
     width: 18px;
+}
+
+.title-condition {
+    font-size: 14px;
+    color: #666666;
+}
+
+.text-amount {
+    font-size: 46px;
+    font-weight: bold;
+    padding: 32px 0;
+}
+
+.title-item {
+    font-size: 24px;
+    margin-top: 16px;
+}
+
+.button-buy {
+    color: #fff;
+    background-color: #3486FA;
+    padding: 10px 80px;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
