--- a/client/src/app/items-detail/items-detail.component.scss
+++ b/client/src/app/items-detail/items-detail.component.scss
@@ -1,13 +1,33 @@
-.div-list-products {
-    width: 68%;
-    background-color: #fff;
-    margin: auto;
+ul.breadcrumb {
+    list-style: none;
+    background-color: #eee;
+    padding: 0;
+}
+
+ul.breadcrumb li {
+    display: inline;
+    font-size: 14px;
+    color: #999999;
+}
+
+ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: #999999;
+    content: "\003e";
+}
+
+.content-item {
+    margin-left: 12%;
+    margin-right: 12%;
+    margin-bottom: 5%;
+    .content-info-item {
+        background-color: #fff;
+    }
 }
 
 .table {
     display: table;
-    width: 100%;
-    //min-height: 212px;
+    width: 100%; //min-height: 212px;
 }
 
 .table-cell {
@@ -16,13 +36,11 @@
     width: 50%;
 }
 
-.display-table-cell {
+.cell-detail {
     display: table-cell;
     padding-top: 32px;
     padding-right: 32px;
-    .font-size {
-        font-size: 24px
-    }
+    padding-left: 32px;
     span {
         display: inline-block;
         vertical-align: middle;
@@ -38,22 +56,6 @@
     height: 680px;
     width: 680px;
     border-radius: 4px;
-}
-
-.width-180 {
-    width: 180px;
-}
-
-.align-left {
-    text-align: left;
-}
-
-.ico-shipping {
-    display: block;
-    background-image: url("../../assets/images/ic_shipping.png");
-    background-repeat: no-repeat;
-    height: 18px;
-    width: 18px;
 }
 
 .title-condition {
@@ -73,9 +75,27 @@
 }
 
 .button-buy {
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
     color: #fff;
     background-color: #3486FA;
-    padding: 10px 80px;
     border: 1px solid transparent;
     border-radius: 4px;
+}
+
+.content-description {
+    padding: 0 0 32px 32px;
+    width: 648px;
+    text-align: justify;
+    p {
+        font-size: 16px;
+        color: #666666;
+        margin: 0;
+    }
+    h3 {
+        font-size: 28px;
+        margin-bottom: 0;
+        padding-bottom: 32px;
+    }
 }
