--- a/client/src/app/items/items.component.html
+++ b/client/src/app/items/items.component.html
@@ -1,15 +1,22 @@
-<div class="div-list-products" *ngFor="let item of data">
-  <div class="table" >
-    <div class="table-cell width-180">
-      <img (click)="goToDetail(item.id)" class="img-product" [src]="item.picture">
-    </div>
-    <div class="display-table-cell align-left">
-      <span class="font-size"> {{item.price.currency}} {{item.price.amount}}</span>
-      <span *ngIf="item.free_shipping" class="ico-shipping"></span>
-      <p>{{item.title}}</p>
-    </div>
-    <div class="table-cell">
-      {{item.city}}
+<div *ngIf="!loading" class="div-list-products">
+  <ul class="breadcrumb">
+    <li *ngFor="let category of data.categories">{{category}}</li>
+  </ul>
+  <div class="content-item" *ngFor="let item of data.items; let i=index">
+    <div *ngIf="i<4" class="table">
+      <div class="cell-picture">
+        <a routerLink="/items/{{item.id}}">
+          <img class="img-product" [src]="item.picture">
+        </a>
+      </div>
+      <div class="cell-detail">
+        <span class="price"> {{item.price.currency}} {{item.price.amount}}</span>
+        <span *ngIf="item.free_shipping" class="ico-shipping"></span>
+        <p>{{item.title}}</p>
+      </div>
+      <div class="cell-city">
+        {{item.city}}
+      </div>
     </div>
   </div>
 </div>
