--- a/client/src/app/messages/messages.component.css
+++ b/client/src/app/messages/messages.component.css
@@ -1,35 +1,15 @@
 /* MessagesComponent's private CSS styles */
-h2 {
-  color: red;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
-body {
-  margin: 2em;
-}
-body, input[text], button {
-  color: crimson;
-  font-family: Cambria, Georgia;
+
+.container {
+    margin-left: 12%;
+    margin-right: 12%;
+    margin-top: 20px;
+    background-color: #fff;
+    height: 100px;
 }
 
-button.clear {
-  font-family: Arial;
-  background-color: #eee;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 4px;
-  cursor: pointer;
-  cursor: hand;
-}
-button:hover {
-  background-color: #cfd8dc;
-}
-button:disabled {
-  background-color: #eee;
-  color: #aaa;
-  cursor: auto;
-}
-button.clear {
-  color: #888;
-  margin-bottom: 12px;
+.message {
+    font-size: 18px;
+    text-align: center;
+    padding-top: 20px;
 }
