--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,8 +1,3 @@
-<div *ngIf="messageService.messages.length">
-
-  <h2>Messages</h2>
-  <button class="clear"
-          (click)="messageService.clear()">clear</button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+<div class="container" *ngIf="messageService.messages.length">
+  <div class="message" *ngFor='let message of messageService.messages'> {{message}} </div>
 </div>
