--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,11 @@
 /* Master Styles */
+
 body {
-  margin: 0;
-  background-color: #eeeeee;
-  font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background-color: #eeeeee;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    cursor: pointer;
 }
